WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133243
REGRESSION (WebKit2): Keyboard disappears/appears automatically between text boxes
https://bugs.webkit.org/show_bug.cgi?id=133243
Summary
REGRESSION (WebKit2): Keyboard disappears/appears automatically between text ...
Enrica Casucci
Reported
2014-05-23 16:57:35 PDT
Given the asynchronous nature of WebKit2, the keyboard layer can receive requests to dismiss the keyboard and show the keyboard in two different spins of the runloop which causes the keyboard to animate out and in again when moving from one text field to another. <
rdar://problem/16761913
>
Attachments
Patch
(12.68 KB, patch)
2014-05-23 17:02 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-05-23 17:02:18 PDT
Created
attachment 232005
[details]
Patch
Benjamin Poulain
Comment 2
2014-05-23 17:07:26 PDT
Comment on
attachment 232005
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232005&action=review
> Source/WebKit2/ChangeLog:11 > + We need to ensure that when an element loses focus and another one gets it, > + this is handled in one single message in the UI process to avoid seeing > + the keyboard animating in and out.
I would also add a paragraph explaining the "block trick".
Enrica Casucci
Comment 3
2014-05-23 17:19:09 PDT
Committed revision 169294.
Enrica Casucci
Comment 4
2014-05-23 17:19:17 PDT
Committed revision 169294.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug