Source/WebKit2/WebProcess/WebPage/WebPage.h
@@ -1202,6 +1202,7 @@ private:
     bool m_scaleWasSetByUIProcess;
     bool m_userHasChangedPageScaleFactor;
     bool m_userIsInteracting;
+    bool m_hasPendingBlurNotification;
     WebCore::FloatSize m_screenSize;
     WebCore::FloatSize m_availableScreenSize;
     RefPtr<WebCore::Range> m_currentBlockSelection;
